<resources>
    <string name="app_name">CraGee App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="list_items">
        <item>Friends</item>
        <item>Groups</item>
        <item>Pages</item>
        <item>Events</item>
        <item>Help and Support</item>
        <item>Settings and Privacy</item>
        <item>Logout</item>
    </string-array>
    <string-array name="Relationship_status">

        <item>Single</item>
        <item>In a relationship</item>
        <item>Engaged</item>
        <item>Married</item>
        <item>In a civil union</item>
        <item>In a domestic partnership</item>
        <item>In an open relationship</item>
        <item>Its complicated</item>
        <item>Single</item>
        <item>Widowed</item>

    </string-array>
    <string name="still_working"> Updated soon </string>
    <string name="Members">Members</string>
    <string name="Share_something_here_useful_for_this_group">Share something here useful for this group</string>
    <string name="Post">Post</string>
    <string name="Anyone_can_find_the_group_and_see_who_is_in_it_and_what_they_post">Anyone can find rhe group and see who is in it and what they post</string>
    <string name="User_Agreement">User Agreement</string>
    <string name="about_User_Agreement">This User Agreement (the “Agreement”) govern your use of CraGee App (“Platform”),
        including all features. By using the Services, you agree to be bound by the Agreement. Please take the time to read
        them carefully. </string>
    <string name="Posting_Content"> Posting Content</string>
    <string name="about_Posting_Content"> CraGee  App is building a community where people can get closer to each other.
        We expect our users express themselves and share content responsibly on the Platform.
    </string>
    <string name="avoid_posting">  You shall not post, upload, transmit, or share any information that:</string>
    <string name="about_avoid_posting">
    violates the Agreement, Community Guidelines and other terms and policies that apply to your use of the Platform.\n
    is unlawful, discriminatory, fraudulent, harassing, or otherwise grossly harmful.\n
    harm minors in any way.\n
    infringes or violates someone else’s right, including but not limited to patent, trademark, copyright or other proprietary rights.\n
    We will remove any content we find in violation of the above, we may also terminate your account for sever violation.</string>
    <string name="Content_on_the_Platform">Content on the Platform</string>
    <string name="about_Content_on_the_Platform"> Any user content will be considered non-confidential and non-proprietary.\n

    You shall be solely responsible for your own content and the consequences of submitting and publishing your content on the Services.\n
    We do not endorse any content submitted to the Services by any user or any opinion, recommendation, or advice expressed therein, any use or reliance on any content
        obtained through the Service is at your own risk. Any views and opinions expressed by users on the
        Platform do not necessarily reflect the policy or position of the Platform.\n

    We reserve the right to remove content that violates The Agreement, Community Guidelines and
        other policies that apply to your use of the Service.\n
</string>
    <string name="Rights_of_the_Content"> Rights of the Content</string>
    <string name="about_Rights_of_the_Content"> You retain all ownership rights in the content you post and share on the Platform, and nothing in the Agreement restrain
    the rights you have to your own content. In consideration of providing the Service, when you post or share content that is
    protected by intellectual property rights, you hereby grant us an unconditional, irrevocable, non-exclusive, royalty-free,
    fully transferable, assignable, sub-licensable, perpetual worldwide license to host, use, modify, translate, adapt, reproduce,
    make derivative works of, publish and/or transmit your content. including but not limited to advertising, marketing and promoting
    and redistributing part or all of the Services (and derivative works thereof) in any formats and through any channels.\n
    When you post your content through the Service, you agree and represent that you own that content or you have received permission
    from the owner of any part of the content submitted to the Services.</string>
    <string name="Use_of_the_Service">Use of the Service </string>
    <string name="about_Use_of_the_Service">The features of our Services may change from time to time, at our own discretion, including but not limited to:
    increasing or removing any feature within the Service, restraining you or users generally from accessing certain features,
    removing or refusing to distribute any content on the Platform.</string>
    <string name="You_may_not">You may not: </string>
    <string name="about_You_may_not">modify, adapt, translate, reverse engineer, disassemble, decompile or create any derivative works based on the Services, including any files, tables or documentation (or any portion thereof) or determine or attempt to determine any source code, algorithms, methods or techniques embodied the Platform or any derivative works thereof;
    distribute, license, transfer or sell, in whole or in part, any of the Services or any derivative works thereof;
    market, rent or lease the Services for a fee or charge, or use the Platform to advertise or perform any commercial solicitation;
    interfere with or attempt to interfere with the proper working of the Services, disrupt our website or any networks connected to the Services, or bypass any measures we may use to prevent or restrict access to the Services;
    incorporate the Platform or any portion thereof into any other program or product.
    use automated scripts to collect information from or otherwise interact with the Services;
    use or attempt to use another’s account, service or system without authorization from the user, or create a false identity on the Services;
    use the Services to upload, transmit, distribute, store or otherwise make available in any way files that contain viruses, trojans, worms, logic bombs or other material that is malicious or technologically harmful;
    We reserve the right, at any time and without prior notice, to remove or disable access to content at our discretion for any reason. Some of the reasons we may remove or disable access to content may include finding the content objectionable, in violation of The Agreement, or otherwise harmful to the Services or our users.
    </string>
    <string name="Limitation_of_liability">Limitation of liability </string>
    <string name="about_Limitation_of_liability"> We are trying hard to bring you the best service and maintain a friendly community on the Platform. HOWEVER, THE SERVICES ARE
    PROVIDED “AS IS” AND WE MAKE NO WARRANTY OR REPRESENTATION TO YOU THAT THEY WILL ALWAYS BE SAFE, SECURE, ERROR-FREE, UNDISRUPTED.\n

    We do not control what users do or say on the Platform, and we are not responsible for their actions or conduct
    (whether online or offline) or any content they share.\n

    OUR LIABILITY SHALL BE LIMITED TO THE FULLEST EXTENT PERMITTED BY APPLICABLE LAW, AND UNDER NO CIRCUMSTANCE WILL WE BE
    LIABLE TO YOU FOR ANY LOST PROFITS, REVENUES, INFORMATION, OR DATA, OR CONSEQUENTIAL, SPECIAL, INDIRECT, EXEMPLARY, PUNITIVE,
    OR INCIDENTAL DAMAGES ARISING OUT OF OR RELATED TO THE AGREEMENT.\n
     </string>
    <string name="Other_Terms"> Other Terms </string>
    <string name="about_Other_Terms"> 1. Changes of the terms\n
        We amend the terms of the Agreement from time to time, for instance when we update the functionality of our Services or when there are regulatory changes. We will use commercially reasonable efforts
        to generally notify all users of any material changes to the Agreement, such as through a notice on our Platform.
        If you do not agree to the new terms, you must stop accessing or using the Services.\n

        2. Suspension or termination account\n
        3.To access or use some of our Services, you must create an account with us. You agree that you are solely responsible for the activity that occurs under your account.

        We reserve the right to suspend or disable your user account at any time if in our reasonable opinion you have failed to comply with any of the provisions of the Agreement.\n

        4. Parental Consent\n
        In addition, if you are under the age of 18, you confirm that you possess legal parental or guardian consent for accessing or using the Platform, and are fully able and competent to enter into, abide by, and comply with the Agreement.\n

        5. No Waiver\n
        Our failure to insist upon or enforce any provision of the Agreement shall not be construed as a waiver of any provision or right.\n

        6.If any court of law, having jurisdiction to decide on this matter, rules that any provision of the Agreement is invalid, then that provision will be removed from the Agreement without affecting the rest of the Agreement, and the remaining provisions of the Agreement will continue to be valid and enforceable.
    </string>
    <string name="Contact"> Contact </string>
    <string name="about_Contact"> You can reach us at  crageeapp@gmail.com. </string>
    <string name="Posts">Posts</string>
    <string name="about_reviews">The name and photo on your CraGee Profile will appear with your reviews</string>
    <string name="review_hint"> Describe your experience(optional)</string>
    <string name="reviews">Reviews are public and editable</string>
    <string name="Home">Home</string>
    <string name="Groups">Groups</string>
    <string name="Search">Search</string>
    <string name="Profile">Profile</string>
    <string name="CraGee_app">What is CraGee App?</string>
    <string name="about_CraGee_app">CraGee App is a messaging app with a focus on speed and security.It is super fast and simple to use.\n\n
    • you can use CraGee App on all your devices at the same time. your messages synchronise any number of your phone,tablet or computers.\n
    •with CraGee App you can send messages, photos and  create groups,personal pages,personal account.
    </string>
    <string name="CraGee_app_for">Who is CraGee App for?</string>
    <string name="about_CraGee_app_for">CraGee App is for everyone who wants fast and reliable messaging and calls.
        Anyone can make public and private group for efficient transfer of information for free.public groups can be joined
        by anyone.private groups can be joined by everyone after
        the payment of required group joining fee.</string>
    <string name="CraGee_app_age">How old is CraGee App?</string>
    <string name="about_CraGee_app_age">CraGee App for Android was launched in July 1,2020.The Alpha version
        of CraGee App for Android officially launched on February 2020. </string>
    <string name="CraGee_app_which"> Which devices can I use ?</string>
    <string name="about_CraGee_app_which">You can use CraGee App on smartphone(Android (4.1 and up)) and
        tablet. We are developing the web version of CraGee App and it will be available soon.</string>
    <string name="CraGee_app_where">  Where is CraGee App based?</string>
    <string name="about_CraGee_app_where">The CraGee App development team is based in Uttar Pradesh,India.
    Most of the developers behind CraGee App have originally come from Lucknow,Uttar Pradesh</string>
    <string name="rate_app">Rate your experience</string>
    <string name="rate_app_text">Please rate CraGee App in the play store and support us </string>
    <string name="about_rate_app">How would you rate CraGee App</string>
    <string name="about_rate_thanks">Thank You for rating us</string>
</resources>