<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@id/fragment_home"
            android:icon="@drawable/ic_home"
            android:title="@string/Home"
            android:menuCategory="secondary">
    </item>
    <item
        android:id="@id/fragment_search"
        android:icon="@drawable/ic_search"
        android:title="@string/Search"
        android:menuCategory="secondary">
    </item>

    <item
        android:id="@id/fragment_posts"
        android:icon="@drawable/ic_post"
        android:title="@string/Posts"
        android:menuCategory="secondary">
    </item>
    <item
        android:id="@id/fragment_groups"
        android:icon="@drawable/ic_groups"
        android:title="@string/Groups"
        android:menuCategory="secondary">
    </item>
    <item
        android:id="@id/fragment_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/Profile"
        android:menuCategory="secondary">
    </item>
</menu>