<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings.TermsOfServiceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/User_Agreement"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_User_Agreement"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:lineSpacingExtra="3dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Posting_Content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_Posting_Content"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:lineSpacingExtra="3dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/avoid_posting"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:lineSpacingExtra="3dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_avoid_posting"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:lineSpacingExtra="3dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Content_on_the_Platform"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_Content_on_the_Platform"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:lineSpacingExtra="3dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Rights_of_the_Content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_Rights_of_the_Content"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:lineSpacingExtra="3dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Use_of_the_Service"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_Use_of_the_Service"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:lineSpacingExtra="3dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/You_may_not"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_You_may_not"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:lineSpacingExtra="3dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Limitation_of_liability"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_Limitation_of_liability"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:lineSpacingExtra="3dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Other_Terms"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_Other_Terms"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:lineSpacingExtra="3dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Contact"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_Contact"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:lineSpacingExtra="3dp"
            android:layout_marginEnd="10dp"/>
    </LinearLayout>

</ScrollView>