<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Settings.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CraGee_app"
                android:textSize="20sp"
                android:textColor="@color/black"

                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_CraGee_app"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CraGee_app_for"
                android:textSize="20sp"
                android:textColor="@color/black"

                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_CraGee_app_for"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CraGee_app_age"
                android:textSize="20sp"
                android:textColor="@color/black"

                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_CraGee_app_age"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CraGee_app_which"
                android:textSize="20sp"
                android:textColor="@color/black"

                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_CraGee_app_which"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CraGee_app_where"
                android:textSize="20sp"
                android:textColor="@color/black"

                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_CraGee_app_where"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>


        </LinearLayout>
    </LinearLayout>


</ScrollView >