<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ratings.RatingsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:elevation="3dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/reviews"
                android:textSize="23sp"
                android:textColor="@color/black"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_reviews"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <RatingBar
        android:id="@+id/rating_bar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardView"
        android:layout_marginTop="50dp"
        android:numStars="5"
        android:max="5"
        android:stepSize="1"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/etReview"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/rating_bar_button"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/white_grey_border"
        android:ems="10"
        android:hint="@string/review_hint"
        android:inputType="textPersonName"
        android:padding="10dp"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnPostRatings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="100dp"
        android:text="@string/Post"
        android:layout_below="@+id/etReview"
        android:textColor="@color/black" />
</RelativeLayout>